--- a/Week 5/Tugas/index.html
+++ b/Week 5/Tugas/index.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./dist/fancybox/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="./dist/Dynamic-Animated-Timeline-Slider/jquery.roadmap.min.css">
 
     <!-- JS -->
     <script src="./dist/jquery/jquery-3.6.0.slim.min.js"></script>
     <script src="./dist/fancybox/jquery.fancybox.min.js"></script>
-    <script src="./dist/fancybox/jquery.easing-1.3.pack.js"></script>
-    <script src="./dist/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
+    <script src="./dist/Dynamic-Animated-Timeline-Slider/jquery.roadmap.min.js"></script>
     <script src="./js/index.js"></script>
 
 </head>
@@ -35,36 +35,59 @@
             <i class="fa fa-history" aria-hidden="true"></i>
             <h1>Our History</h1>
         </div>
+        <br><br>
+        <!-- Ini Timeline -->
+        <div id="my-timeline"></div>
         <div class="content">
-            <div class="p1">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum laborum dolores nisi impedit minus
-                    beatae nostrum nobis? Numquam culpa consequuntur accusantium ullam, temporibus quaerat fuga.
-                    Exercitationem temporibus dolorum culpa obcaecati aperiam ipsum cum in labore esse doloremque
-                    consequuntur sunt minus iste sint sit commodi harum suscipit tempore, autem quam ab asperiores
-                    reiciendis cupiditate. Dolor explicabo a ducimus iusto. Facilis, at est. Laudantium illo quae
-                    repudiandae, at, ea aliquam accusantium ex enim reiciendis fuga exercitationem consequatur suscipit
-                    non doloribus adipisci neque eveniet praesentium odit in ullam explicabo. Est, voluptate nesciunt
-                    nobis recusandae voluptatum optio voluptas praesentium quas itaque maiores eligendi magnam.</p>
+            <button class="history-details">Show More</button>
+            <div class="paragraph">
+                <h3 style="margin-bottom: 10px;">(1984–1995) Origins and initial growth</h3>
+                <p>Cipta Karya Tech Systems was founded in December 1984 by Sandy Lerner along with her husband Leonard
+                    Bosack.
+                    Lerner was the director of computer facilities for the Stanford University Graduate School of
+                    Business. Bosack was in charge of the Stanford University computer science department's
+                    computers.
+                    Cipta Karya Tech's initial product has roots in Stanford University's campus technology. In the
+                    early 1980s
+                    students and staff at Stanford, including Bosack, used technology on the campus to link all of the
+                    school's computer systems to talk to one another, creating a box that functioned as a multiprotocol
+                    router called the "Blue Box". </p>
             </div>
-            <div class="p2">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum laborum dolores nisi impedit minus
-                    beatae nostrum nobis? Numquam culpa consequuntur accusantium ullam, temporibus quaerat fuga.
-                    Exercitationem temporibus dolorum culpa obcaecati aperiam ipsum cum in labore esse doloremque
-                    consequuntur sunt minus iste sint sit commodi harum suscipit tempore, autem quam ab asperiores
-                    reiciendis cupiditate. Dolor explicabo a ducimus iusto. Facilis, at est. Laudantium illo quae
-                    repudiandae, at, ea aliquam accusantium ex enim reiciendis fuga exercitationem consequatur suscipit
-                    non doloribus adipisci neque eveniet praesentium odit in ullam explicabo. Est, voluptate nesciunt
-                    nobis recusandae voluptatum optio voluptas praesentium quas itaque maiores eligendi magnam.</p>
+            <div class="paragraph">
+                <h3 style="margin-bottom: 10px;">(2006-2012) The Human Network</h3>
+                <p>As part of a rebranding campaign in 2006, Cipta Karya Tech Systems adopted the shortened name "Cipta
+                    Karya Tech" and
+                    created "The Human Network" advertising campaign. These efforts were meant to make Cipta Karya Tech
+                    a
+                    "household" brand—a strategy designed to support the low-end Linksys products and future consumer
+                    products.
+
+                    On the more traditional business side, Cipta Karya Tech continued to develop its routing, switching
+                    and
+                    security portfolio. The quickly growing importance of Ethernet also influenced the company's product
+                    lines. Limits of IOS and aging Crescendo architecture also forced Cipta Karya Tech to look at
+                    merchant silicon
+                    in the carrier Ethernet segment. This resulted in a new ASR9000 product family intended to
+                    consolidate the company's carrier ethernet and subscriber management business around EZChip-based
+                    hardware and IOS-XR</p>
             </div>
-            <div class="p3">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum laborum dolores nisi impedit minus
-                    beatae nostrum nobis? Numquam culpa consequuntur accusantium ullam, temporibus quaerat fuga.
-                    Exercitationem temporibus dolorum culpa obcaecati aperiam ipsum cum in labore esse doloremque
-                    consequuntur sunt minus iste sint sit commodi harum suscipit tempore, autem quam ab asperiores
-                    reiciendis cupiditate. Dolor explicabo a ducimus iusto. Facilis, at est. Laudantium illo quae
-                    repudiandae, at, ea aliquam accusantium ex enim reiciendis fuga exercitationem consequatur suscipit
-                    non doloribus adipisci neque eveniet praesentium odit in ullam explicabo. Est, voluptate nesciunt
-                    nobis recusandae voluptatum optio voluptas praesentium quas itaque maiores eligendi magnam.</p>
+            <div class="paragraph">
+                <h3 style="margin-bottom: 10px;">Present Day</h3>
+                <p>On July 23, 2013, Cipta Karya Tech Systems announced a definitive agreement to acquire Sourcefire for
+                    $2.7
+                    billion. On August 14, 2013, Cipta Karya Tech Systems announced it would cut 4,000 jobs from its
+                    workforce,
+                    which was roughly 6%, starting in 2014.At the end of 2013, Cipta Karya Tech announced poor revenue
+                    due to
+                    depressed sales in emerging markets, caused by economic uncertainty and by fears of the National
+                    Security Agency planting backdoors in its products.
+
+                    In April 2014, Cipta Karya Tech announced funding for early-stage firms to focus on the Internet of
+                    Things. The
+                    investment fund was allocated to investments in IoT accelerators and startups such as The Alchemist
+                    Accelerator, Ayla Networks and EVRYTHNG. Later that year, the company announced it was laying
+                    off another 6,000 workers or 8% of its global workforce, as part of a second restructuring. On
+                    November 4, 2014, Cipta Karya Tech announced an investment in Stratoscale</p>
             </div>
         </div>
     </section>
@@ -72,7 +95,7 @@
     <section id="products">
         <div class="title">
             <i class="fa fa-cubes" aria-hidden="true"></i>
-            <h1>Our Products</h1>
+            <h1>Our Top Products</h1>
         </div>
         <div class="content">
             <div class="list">
@@ -124,6 +147,7 @@
     <footer>
         <p>Kelompok IX &copy; 2021</p>
     </footer>
+    <script src="https://unpkg.com/scrollreveal"></script>
 </body>
 
 </html>
